Migration para criação do banco VendasDB.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@
 /.vs/123Vendas/FileContentIndex/b1d9d7ee-388a-4f02-99b6-40b119c89b28.vsidx
 /.vs/123Vendas/FileContentIndex/c7216685-3e71-4a0a-bbef-9dbfcaffa618.vsidx
 /.vs/123Vendas/FileContentIndex/e3fa3ceb-9ada-4153-ba05-5e87a86ab7db.vsidx
+/.vs/123Vendas/FileContentIndex/549bb094-46fa-4016-a488-7048210398c3.vsidx
+/.vs/123Vendas/FileContentIndex
